<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Typos">
    <string name="app_name">StejsiApp</string>
    <string name="input_email_req" >Type your e-mail address:</string>
    <string name="main_logo">Main logo</string>
    <string name="input_email_hint">You need to sign up with e-mail address which you have shared with your personal trainer.</string>
    <string name="register">Sign up</string>
    <string name="error_registration_wrong_email">You cannot be signed up. Typed e-mail address is not authorised by your personal trainer.</string>
    <string name="info_registration_activate">You are about to receive an&#160;activation e-mail. Check your e-mail box and click the activation link included in the&#160;e-mail message. Then come back here and tap \"Continue\"</string>
    <string name="error_unexpected">Unexpected error occurred. Most likely the&#160;server is not responding. Please try again in a&#160;while.</string>
    <string name="error_no_server_connection">There is a problem connecting the&#160;server. You need to try again latter.</string>
    <string name="error_no_internet_connection">It seems that you are not connected to the&#160;Internet. Check your connection and try again.</string>
    <string name="info_activation_email_sent">You are about to receive an&#160;activation e-mail to register this new device. Check your e-mail box and click the activation link included in the&#160;e-mail message. Then come back here and tap \"Continue\"</string>
    <string name="info_activation_email_sent_new_device">You are already registered on another device. If you want to use this device please use activation e-mail which you are about to receive and come back to the&#160;app.</string>
    <string name="repeat_registration"><u>Repeat registration process</u></string>
    <string name="info_repeated_registration_message">If you repeat registration process the activation link which we sent will become invalid. If you haven\'t received the&#160;activation email check spam folder first.</string>
    <string name="error_allowed_registration_attempts_exceeded">You have tried to register too many times from this device. Try again in an&#160;hour.</string>
    <string name="info_still_waiting_for_activation">I\'m still waiting for you! <b>Clik activation link included in the&#160;email which was sent to you</b>, and than click \"Continue\".</string>
    <string name="continue_button">Continue</string>
    <string name="info_still_not_active">Your account is still inactive…</string>
    <string name="wait_a_moment">Wait a sec…</string>
    <string name="info_waiting_too_long">This time it\'s taking too long…</string>
    <string name="app_title">StejsiApp</string>
    <string name="profile">Profile</string>
    <string name="profile_ext">Your data</string>
    <string name="home">Home</string>
    <string name="home_ext">Main screen</string>
    <string name="about">About</string>
    <string name="about_ext">Information about this app</string>
    <string name="confirm_presence"><b>Confirm your presence:</b></string>
    <string name="confirm_presence_encourage">Have you done your best?</string>
    <string name="presence_present">Present!</string>
    <string name="training">Training %1$s</string>
    <string name="stejsi">Stejsi</string>
    <string name="info_presence_confirmed">Presence is confirmed</string>
    <string name="ok">OK</string>
    <string name="error_sth_went_wrong">Oops! Something\'s wrong</string>
    <string name="will_try_again_CAP">TOO BAD</string>
    <string name="we_will_gym">We will practice!</string>
    <string name="confirm_schedule_encourage"><b>So what? Will you be there?</b></string>
    <string name="add_to_callendar">Add to calendar</string>
    <string name="confirming_schedule">Confirm</string>
    <string name="info_you_have_new_schedule">The training is planned on %1$s. Where? Here: %2$s (%3$s)</string>
    <string name="info_you_have_new_schedule_no_location">The training is planned on %1$s. Still no idea where…</string>
    <string name="info_schedule_confirmed">Training schedule confirmed</string>
    <string name="menu_refresh">Refresh content</string>
    <string name="tip_comments_info">Comments (%1$s)</string>
    <string name="tip_no_comments">No comments - add yours</string>
    <string name="tip_no_comments_short">No comments</string>
    <string name="desc_add_new_comment_button">Add new comment button</string>
    <string name="trainings">Trainings</string>
    <string name="about_app">About</string>
    <string name="app_version">Version: %1$s</string>
    <string name="developed_by">Developed by: Miłosz Kozłowski</string>
    <string name="about_app_info">This app is created for those who take part in personal trainings delivered by trainer Kasia Stasiecka. It was developed as since project.</string>
    <string name="feedback_request">Feedback is a gift: <a href="mailto:mkozlowski@tlen.pl">mkozlowski@tlen.pl</a></string>
    <string name="trainings_amount">Trainings:%1$s</string>
    <string name="trainings_done_amount">Done:%1$s</string>
    <string name="left_to_plan">Still to be planned:%1$s</string>
    <string name="valid_indefinitely">Valid always</string>
    <string name="valid_days">Valid for%1$s days more</string>
    <string name="out_dated">Validity expired</string>
    <string name="training_info_details">%1$s, %2$s, (%3$s minutes)</string>
    <string name="training_info_no_location">(%1$s minutes)</string>
    <string name="time_is_running_out">There are only%1$s days left!</string>
    <string name="time_is_running_out_one_day">It is only one day left!</string>
    <string name="tips">Stejsi\'s wisdom</string>
    <string name="cancel_confirmation">Traininig ia about to be canceled, Persolan trainer will be informed. Continue?</string>
    <string name="cancel_confirmed">Yes, cancel</string>
    <string name="cancel_done">Trainer was informed</string>
    <string name="exit">Quit</string>
    <string name="exit_confirm_info">Do you want to quit app now?</string>
    <string name="exit_confirm">Quit</string>
    <string name="exit_cancel">I\'m staying</string>
    <string name="test">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</string>
    <string name="your_comment_here">Your comment:</string>
    <string name="registration_new_device_info">You are registered on another device. Once you confirm this registration by clicking on activation link you will be logged out fro other devices.</string>
    <string name="registration_new_device_info_title">New device</string>
    <string name="logout_confirm_info">When signed out you will be not able to use this app on this phone until new registration. Logging out?</string>
    <string name="logout_info">Signing out</string>
    <string name="logout_confirm">Sign out</string>
    <string name="logout_logged_out_info">You were singed out. If you want to use the app please register your account.</string>
    <string name="go_back">Go back</string>
    <string name="due_PLN">Due: PLN %1$s</string>
    <string name="calendar_event_title">Personal training with Stejsi</string>
    <string name="calendar_event_desc">Let us stay fit! We will practice together. Be prepared.</string>
    <string name="email_regex">^\\w+[\\w-.]*@\\w+((-\\w+)|(\\w*))\\.[a-z]{2,3}$</string>
    <string name="add_to_calendar_sdf">yyyy-MM-dd\'T\'HH:mm</string>
    <string name="training_cancel">Training cancellation</string>
    <string name="main_inviting">We will practice! I\'m inviting you to training with me.</string>
    <string name="main_personal_with_stejsi">Personal training with Stejsi</string>
</resources>
