<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/main_logo"/>

    <TextView
        android:id="@+id/email_req_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_email_req"
        android:paddingHorizontal="5dp"
        style="@style/CommonText" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/input_email_hint"
        android:paddingHorizontal="5dp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/CommonButton"
        android:paddingHorizontal="5dp" />

    <Button
        android:id="@+id/continue_btn"
        style="@style/CommonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"
        android:text="@string/continue_button"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/info_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="5dp"/>

    <TextView
        android:id="@+id/clickable_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/link"
        android:visibility="gone"
        android:text="@string/repeat_registration"
        android:paddingHorizontal="5dp"
        android:paddingTop="5dp"/>

</LinearLayout>