<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/tipCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardForegroundColor="@color/cardBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">



                <!-- Title, secondary and supporting text -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/mainViewScheduleCardThumb"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="8dp"
                        android:padding="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_schedule_black_24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/mainViewScheduleCardHeader"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                         />

                    <TextView
                        android:id="@+id/mainViewScheduleCardHeader"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/we_will_gym"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/mainViewScheduleCloseButton"
                        app:layout_constraintStart_toEndOf="@id/mainViewScheduleCardThumb"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <ImageButton
                        android:id="@+id/mainViewScheduleCloseButton"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_close_black_24dp"
                        android:backgroundTint="@color/cardBackground"
                        app:layout_constraintStart_toEndOf="@id/mainViewScheduleCardHeader"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:visibility="gone"
                        />



                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/mainViewScheduleCardText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
                <TextView
                    android:id="@+id/mainViewCardScheduleSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/confirm_schedule_encourage"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mainViewScheduleToCallendarButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/add_to_callendar"
                    android:visibility="gone"
                    style="?attr/borderlessButtonStyle"
                    />

                <ProgressBar
                    android:id="@+id/mainViewButtonProgressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:visibility="gone"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mainViewScheduleConfirmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/confirming_schedule"
                    style="?attr/borderlessButtonStyle"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>