<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:scrollbars="none"
        android:layout_weight="1">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardElevation="8dp"
            android:layout_margin="8dp"
            app:contentPadding="0dp"
            app:cardForegroundColor="@color/cardBackground"
            app:layout_scrollFlags="scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/tipItemHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <model.viewElements.FadingImageView
                        android:id="@+id/tipItemImage"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/stejsi_face"/>

                    <ImageButton
                        android:id="@+id/tipItemCloseBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="0dp"
                        android:paddingTop="0dp"
                        android:paddingStart="16dp"
                        android:paddingBottom="16dp"
                        android:src="@drawable/ic_close_black_24dp"
                        android:backgroundTint="@android:color/transparent"
                        android:background="@android:color/transparent"
                        android:elevation="8dp"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tipItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tipItemHead"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="4dp"
                    android:paddingHorizontal="4dp"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:text="Tytuł tego czegoś"/>

                <TextView
                    android:id="@+id/tipItemDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tipItemTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingHorizontal="4dp"
                    android:text="16 lipca 2019 14:15"
                    android:textColor="@color/colorGray"/>

                <TextView
                    android:id="@+id/tipItemBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tipItemDateTime"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingHorizontal="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/test"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>

                <TextView
                    android:id="@+id/tipItemCommentsInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_comments_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tipItemBody"
                    android:padding="8dp"

                    android:textStyle="bold"
                    />

                <LinearLayout
                    android:id="@+id/tipItemCommentsView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tipItemCommentsInfo"
                    android:orientation="vertical">



                </LinearLayout>


                <TextView
                    android:id="@+id/tipItemYourCommentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_comment_here"
                    app:layout_constraintTop_toBottomOf="@id/tipItemCommentsView"
                    android:paddingHorizontal="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/tipItemNewCommentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tipItemNewCommentBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingLeft="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tipItemYourCommentText"/>

                <ImageButton
                    android:id="@+id/tipItemNewCommentBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/desc_add_new_comment_button"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_send_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tipItemNewCommentEdit"
                    app:layout_constraintTop_toBottomOf="@id/tipItemYourCommentText"
                    android:alpha="0.2"
                    />

                <ProgressBar
                    android:id="@+id/tipItemNewCommentProgressBar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tipItemNewCommentEdit"
                    app:layout_constraintTop_toBottomOf="@id/tipItemYourCommentText"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>